Fixed broken picture references in map

--- a/tigapublic/static/tigapublic/index.html
+++ b/tigapublic/static/tigapublic/index.html
@@ -137,8 +137,8 @@
         </div>
          <% if( ( photo_url != null) && (photo_url != "") ) { %>
              <div id="popup_photo">
-                 <a href ="http://tigaserver.atrapaeltigre.com/<%= photo_url %>" target="_blank">
-                     <img src="http://tigaserver.atrapaeltigre.com/<%= photo_url %>" onerror="this.style.display = 'none'" />
+                 <a href ="http://webserver.mosquitoalert.com/<%= photo_url %>" target="_blank">
+                     <img src="http://webserver.mosquitoalert.com/<%= photo_url %>" onerror="this.style.display = 'none'" />
                  </a>
              </div>
              <div class="photo_license">
