--- a/tigapublic/static/tigapublic/spain.html
+++ b/tigapublic/static/tigapublic/spain.html
@@ -232,8 +232,8 @@
 
           <% if( ( photo_url != null) && (photo_url != "") ) { %>
               <div id="popup_photo">
-                  <a href ="http://tigaserver.atrapaeltigre.com/<%= photo_url %>" target="_blank">
-                  <img src="http://tigaserver.atrapaeltigre.com/<%= photo_url %>" onerror="this.style.display = 'none'" />
+                  <a href ="http://webserver.mosquitoalert.com/<%= photo_url %>" target="_blank">
+                  <img src="http://webserver.mosquitoalert.com/<%= photo_url %>" onerror="this.style.display = 'none'" />
               </a>
               </div>
               <div class="photo_license">
@@ -387,8 +387,8 @@
                     <% if( ( row.photo_url != null) && (row.photo_url != "") ) { %>
                         <div id="photo_reports">
                             <div class="popup_photo_reports">
-                                <a href ="http://tigaserver.atrapaeltigre.com/<%= row.photo_url %>" target="_blank">
-                                    <img src="http://tigaserver.atrapaeltigre.com/<%= row.photo_url %>" onerror="this.style.display = 'none'" />
+                                <a href ="http://webserver.mosquitoalert.com/<%= row.photo_url %>" target="_blank">
+                                    <img src="http://webserver.mosquitoalert.com/<%= row.photo_url %>" onerror="this.style.display = 'none'" />
                                 </a>
                             </div>
                             <div class="photo_license_reports">
