Added preformatted notification messages

--- a/tigapublic/static/tigapublic/spain.html
+++ b/tigapublic/static/tigapublic/spain.html
@@ -189,6 +189,13 @@
                         <option name="-1" i18n="map.notification.predefined.title"></option>
                         <option name="0" i18n="map.notification.preset0.title"></option>
                         <option name="1" i18n="map.notification.preset1.title"></option>
+                          <option name="2" i18n="map.notification.preset2.title"></option>
+                          <option name="3" i18n="map.notification.preset3.title"></option>
+                          <option name="4" i18n="map.notification.preset4.title"></option>
+                          <option name="5" i18n="map.notification.preset5.title"></option>
+                          <option name="6" i18n="map.notification.preset6.title"></option>
+                          <option name="7" i18n="map.notification.preset7.title"></option>
+                          <option name="8" i18n="map.notification.preset8.title"></option>
                       </select>
                   </div>
                   <!-- TITLE -->
