New version of sigte Map

--- a/tigapublic/static/tigapublic/index.html
+++ b/tigapublic/static/tigapublic/index.html
@@ -9,6 +9,7 @@
 
     <link href="lib/bootstrap-3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <link href="lib/bootstrap-select-1.10.0/dist/css/bootstrap-select.min.css" rel="stylesheet">
+    <link href="lib/select2/dist/css/select2.min.css" rel="stylesheet">
     <link href="lib/leaflet/dist/leaflet.css" rel="stylesheet">
 
 
@@ -184,6 +185,7 @@
 
     <script src="lib/bootstrap-3.3.6/js/bootstrap.min.js"></script>
     <script src="lib/bootstrap-select-1.10.0/dist/js/bootstrap-select.min.js"></script>
+    <script src="lib/select2/dist/js/select2.min.js"></script>
 
     <script src="js/latlon-geohash.js"></script>
 
