Changed http to https

--- a/tigapublic/static/tigapublic/spain.html
+++ b/tigapublic/static/tigapublic/spain.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" type="text/css" href="lib/jssocials-1.2.1/jssocials-theme-flat.css">
 
     <!--Font awesome-->
-    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- build:css css/style.min.css -->
     <link href="css/style.css" rel="stylesheet">
