Changed osm tile layer from http to https

--- a/tigapublic/static/tigapublic/lib/Leaflet.markercluster-leaflet-0.7/example/marker-clustering-realworld-maxzoom.388.html
+++ b/tigapublic/static/tigapublic/lib/Leaflet.markercluster-leaflet-0.7/example/marker-clustering-realworld-maxzoom.388.html
@@ -20,7 +20,7 @@
 	<span>Markers will show on the bottom 2 zoom levels even though the markers would normally cluster.</span>
 	<script type="text/javascript">
 
-		var tiles = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+		var tiles = L.tileLayer('https://{s}.tile.osm.org/{z}/{x}/{y}.png', {
 				maxZoom: 18,
 				attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors, Points &copy 2012 LINZ'
 			}),
