--- a/tigapublic/static/tigapublic/lib/Leaflet.markercluster-leaflet-0.7/example/old-bugs/setView-doesnt-remove.html
+++ b/tigapublic/static/tigapublic/lib/Leaflet.markercluster-leaflet-0.7/example/old-bugs/setView-doesnt-remove.html
@@ -27,7 +27,7 @@
 		//Mobile does different bounds to desktop, makes the bug easier to reproduce
 		L.Browser.mobile = true;
 
-		var tiles = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+		var tiles = L.tileLayer('https://{s}.tile.osm.org/{z}/{x}/{y}.png', {
 				maxZoom: 18,
 				attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
 			}),
