--- a/tigapublic/static/tigapublic/lib/Leaflet.markercluster-leaflet-0.7/example/geojson.html
+++ b/tigapublic/static/tigapublic/lib/Leaflet.markercluster-leaflet-0.7/example/geojson.html
@@ -30,7 +30,7 @@
 			]
 		};
 
-		var tiles = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+		var tiles = L.tileLayer('https://{s}.tile.osm.org/{z}/{x}/{y}.png', {
 			maxZoom: 18,
 			attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
 		});
