--- a/tigapublic/static/tigapublic/lib/Leaflet.markercluster-leaflet-0.7/example/old-bugs/disappearing-marker-from-spider.html
+++ b/tigapublic/static/tigapublic/lib/Leaflet.markercluster-leaflet-0.7/example/old-bugs/disappearing-marker-from-spider.html
@@ -51,7 +51,7 @@
 		var trainPosition = 0,
 			trainDirection = 'up';
 
-		var tiles = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+		var tiles = L.tileLayer('https://{s}.tile.osm.org/{z}/{x}/{y}.png', {
 				maxZoom: 18,
 				attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
 			}),
