--- a/tigapublic/static/tigapublic/lib/Leaflet.markercluster-leaflet-0.7/example/old-bugs/removelayer-after-remove-from-map.html
+++ b/tigapublic/static/tigapublic/lib/Leaflet.markercluster-leaflet-0.7/example/old-bugs/removelayer-after-remove-from-map.html
@@ -28,7 +28,7 @@
 	
 		var map = new L.Map('map');
 
-		var tiles = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+		var tiles = L.tileLayer('https://{s}.tile.osm.org/{z}/{x}/{y}.png', {
 			maxZoom: 18,
 			attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
 		});
