--- a/tigapublic/static/tigapublic/spain.html
+++ b/tigapublic/static/tigapublic/spain.html
@@ -987,8 +987,8 @@
 
           <% if( ( photo_url != null) && (photo_url != "") ) { %>
               <div id="popup_photo">
-                  <a href ="https://webserver.mosquitoalert.com/<%= photo_url %>" target="_blank">
-                  <img src="https://webserver.mosquitoalert.com/<%= photo_url %>" onerror="this.style.display = 'none'" />
+                  <a href ="http://webserver.mosquitoalert.com/<%= photo_url %>" target="_blank">
+                  <img src="http://webserver.mosquitoalert.com/<%= photo_url %>" onerror="this.style.display = 'none'" />
               </a>
               </div>
               <div class="photo_license">
