--- a/tigapublic/static/tigapublic/lib/Leaflet.markercluster-leaflet-0.7/example/marker-clustering-zoomtoshowlayer.html
+++ b/tigapublic/static/tigapublic/lib/Leaflet.markercluster-leaflet-0.7/example/marker-clustering-zoomtoshowlayer.html
@@ -21,7 +21,7 @@
 	<span>When clicked we will zoom down to a marker, spiderfying if required to show it and then open its popup</span>
 	<script type="text/javascript">
 
-		var tiles = L.tileLayer('https://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+		var tiles = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
 				maxZoom: 18,
 				attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
 			}),
