--- a/tigapublic/static/tigapublic/lib/Leaflet.markercluster-leaflet-0.7/example/old-bugs/add-markers-offscreen.html
+++ b/tigapublic/static/tigapublic/lib/Leaflet.markercluster-leaflet-0.7/example/old-bugs/add-markers-offscreen.html
@@ -23,7 +23,7 @@
 	<span>Bug <a href="https://github.com/danzel/Leaflet.markercluster/issues/69">#69</a>. Click the button 2+ times. Zoom out. Should just be a single cluster but instead one of the child markers is still visible.</span><br/>
 	<script type="text/javascript">
 
-		var tiles = L.tileLayer('https://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+		var tiles = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
 				maxZoom: 18,
 				attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
 			}),
