Changed keys for epi data

--- a/tigapublic/static/tigapublic/spain.html
+++ b/tigapublic/static/tigapublic/spain.html
@@ -564,9 +564,14 @@
                   <!-- SELECT DATE -->
                       <select name="epidemiology-state" class="epi-select" id="select_epi-state" multiple>
                         <option value="all" i18n="epidemiology.all" selected="true"></option>
+                        <option value="confirmed-not-specified" i18n="epidemiology.form.confirmed-not-specified"></option>
+                        <option value="confirmed-den" i18n="epidemiology.form.confirmed-den"></option>
+                        <option value="confirmed-chk" i18n="epidemiology.form.confirmed-chk"></option>
+                        <option value="confirmed-zk" i18n="epidemiology.form.confirmed-zk"></option>
+                        <option value="confirmed-wnv" i18n="epidemiology.form.confirmed-wnv"></option>
+                        <option value="confirmed-yf" i18n="epidemiology.form.confirmed-yf"></option>
                         <option value="likely" i18n="epidemiology.likely"></option>
                         <option value="suspected" i18n="epidemiology.suspected"></option>
-                        <option value="confirmed" i18n="epidemiology.confirmed"></option>
                         <option value="nocase" i18n="epidemiology.nocase"></option>
                       </select>
                 </div>
@@ -1307,8 +1312,10 @@
           <% if( ( patient_state != null) && (patient_state != "") ) { %>
            <div class="epi-tpl-div">
              <span i18n="epi.patient_state"></span>
-                <img class="epi-icon" src="<%= icon_src%>">
-             <%= patient_state %>
+                <div class="epi-patient-state">
+                  <img class="epi-icon" src="<%= icon_src%>">
+                  <span i18n="<%= patient_state%>" class="not-bold-inline"></span>
+                </div>
            </div>
           <% } %>
 
@@ -1417,7 +1424,7 @@
      <script src="js/leaflet/control-div.js"></script>
      <script src="js/leaflet/geojson-vt-dev.js"></script>
      <script src="js/leaflet/L.CanvasTiles.js"></script>
-     
+
 
      <script src="js/leaflet/control-sidebar-button.js"></script>
      <script src="lib/L.CanvasOverlay.js"></script>
