--- a/tigapublic/static/tigapublic/spain.html
+++ b/tigapublic/static/tigapublic/spain.html
@@ -919,7 +919,7 @@
                 <!-- <img src="./img/predictionmodels_info_icon.svg"> -->
                 <span i18n="layer.biting" class="bold"></span>:
                 <span i18n="layer.biting.description"></span>
-            </li>            
+            </li>
             <li class="" id="info-virus-models-li" style="display:none">
                 <object id="info_virus_models" type="image/svg+xml" data="./img/predictionmodels_info_icon.svg"></object>
                 <!-- <img src="./img/predictionmodels_info_icon.svg"> -->
@@ -935,6 +935,7 @@
         <p i18n="map.more_info"></p>
         </div>
         <script>
+
         $('#info_vector_models').one('load', function() {
           function changeSVG(svg_id, layer_key){
             var svgObject = document.getElementById(svg_id).contentDocument;
@@ -961,8 +962,12 @@
             svgObject.getElementById("circle_4").style.fill =sdColors[3];
           }
 
-          changeSVG('info_biting_models', 'R')
-          changeSVG('info_vector_models', 'M')
+          if ( MOSQUITO.app.mapView.getLayerFromKey('R')) {
+            changeSVG('info_biting_models', 'R')
+          }
+          if ( MOSQUITO.app.mapView.getLayerFromKey('M')) {
+            changeSVG('info_vector_models', 'M')
+          }
 
           //Virus layer if logged
           if (MOSQUITO.app.headerView.logged){
@@ -1245,7 +1250,7 @@
                           <% } else if ( row.expert_validation_result[0]=='site' && row.expert_validation_result[1]=='-4') {%>
                               <span class="tolower" i18n="layer.filtered"></span>
                           <% } else { %>
-                              <span class="tolower" i18n="layer.<%=row.category%>"></span>
+                              <span class="tolower" i18n="layer.<%=row.private_webmap_layer%>"></span>
                           <% } %>
                         </h3>
                     </div>
