--- a/tigapublic/static/tigapublic/spain.html
+++ b/tigapublic/static/tigapublic/spain.html
@@ -125,7 +125,8 @@
         <div id="map-ui" class="map-sidebar"></div>
         <div id="map" class="map"></div>
     </div>
-    <!-- Modal -->
+
+    <!-- Modal SHARING URL-->
     <div id="control-share" class="modal fade" role="dialog">
       <div class="modal-dialog">
         <!-- Modal content-->
@@ -136,6 +137,23 @@
           </div>
           <div class="modal-body content">
 
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <!-- Modal FIRST MESSAGE-->
+    <div id="modal-firstvisit" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title" i18n="modal.firstvisit.title"></h4>
+          </div>
+          <div class="modal-body content">
+              <p i18n="modal.firstvisit.content"></p>
           </div>
         </div>
 
@@ -1493,6 +1511,7 @@
     <script src="lib/tinymce/tinymce.min.js"></script>
 
     <script src="lib/daterangepicker/jquery.comiseo.daterangepicker.min.js"></script>
+    <script src="lib/js-cookie-latest/src/js.cookie.js"></script>
 
 
     <!-- endbuild -->
@@ -1535,6 +1554,16 @@
 
      <!-- endinject -->
     <!-- endbuild -->
+    <script>
+    $(document).ready(function(){
+        if (Cookies.get('first-visit')===undefined){
+          /*Cookies.set('first-visit', 'false', { expires: 7 });*/
+          Cookies.set('first-visit', 'false');
+          $('#modal-firstvisit').modal('show')
+        }
+       })
+    </script>
+   });
 
 </body>
 </html>
