Fixed map weird beahviour

--- a/tigapublic/static/tigapublic/spain.html
+++ b/tigapublic/static/tigapublic/spain.html
@@ -1535,7 +1535,7 @@
 
      <script src="js/leaflet/control-sidebar-button.js"></script>
      <script src="lib/L.CanvasOverlay.js"></script>
-     <script src="js/leaflet/control-layers.js"></script>
+     <script src="js/leaflet/control-layers.js?1500"></script>
      <script src="js/leaflet/control-download.js"></script>
      <script src="js/leaflet/control-notification.js"></script>
      <script src="js/leaflet/control-moreinfo.js"></script>
